# jpegdec_sys

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
src/: JPEGDEC.h  jpeg.c  lib.rs  wrapper.c  wrapper.h
