[package]
name = "jpegdec_sys"
version = "0.1.0"
authors = ["9names <60134748+9names@users.noreply.github.com>"]
edition = "2018"
links = "jpegdec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "^0"
cc = "^1"